--- a/templates/sudoers.postgresql.j2
+++ b/templates/sudoers.postgresql.j2
@@ -1,6 +1,6 @@
 # this is required when running sudo over ssh without -t:
 Defaults:postgres !requiretty
-postgres ALL = NOPASSWD: /usr/bin/pg_ctlcluster postgresql@{{postgresql_version}}-{{postgresql_cluster_name}} stop, \
-   /usr/bin/pg_ctlcluster postgresql@{{postgresql_version}}-{{postgresql_cluster_name}} start, \
-   /usr/bin/pg_ctlcluster postgresql@{{postgresql_version}}-{{postgresql_cluster_name}} restart, \
-   /usr/bin/pg_ctlcluster postgresql@{{postgresql_version}}-{{postgresql_cluster_name}} reload
+postgres ALL = NOPASSWD: /usr/bin/pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} stop, \
+   /usr/bin/pg_ctlcluster /usr/bin/pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} start, \
+   /usr/bin/pg_ctlcluster /usr/bin/pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} restart, \
+   /usr/bin/pg_ctlcluster /usr/bin/pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} reload
