--- a/templates/sudoers.postgresql.j2
+++ b/templates/sudoers.postgresql.j2
@@ -1,8 +1,7 @@
 # this is required when running sudo over ssh without -t:
 Defaults:postgres !requiretty
-postgres ALL = NOPASSWD: systemctl stop postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
-  systemctl start postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
-  systemctl restart postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
-  systemctl reload postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
-  systemctl status postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}
-
+postgres ALL = NOPASSWD: /usr/bin/systemctl stop postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
+  /usr/bin/systemctl start postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
+  /usr/bin/systemctl restart postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
+  /usr/bin/systemctl reload postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}, \
+  /usr/bin/systemctl status postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}
