--- a/templates/repmgr.conf-5.1.j2
+++ b/templates/repmgr.conf-5.1.j2
@@ -286,7 +286,7 @@ failover={{repmgr_failover}}			# one of 'automatic', 'manual'.
 priority={{repmgr_priority}}			# indicate a preferred priority for promoting nodes;
 					# a value of zero prevents the node being promoted to primary
 					# (default: 100)
-#connection_check_type=ping		# How to check availability of the upstream node; valid options:
+connection_check_type={{repmgr_connection_check_type}}		# How to check availability of the upstream node; valid options:
 					#  'ping': use PQping() to check if the node is accepting connections
 					#  'connection': execute a throwaway query on the current connection
 					#  'query': execute an SQL statement on the node via the existing connection
@@ -322,31 +322,30 @@ async_query_timeout={{repmgr_async_query_timeout}}		# Interval (in seconds) whic
 					# variable $TMPDIR, or if not set, in "/tmp". This value can be overridden
 					# by the command line option "-p/--pid-file"; the command line option
 					# "--no-pid-file" will force PID file creation to be skipped.
-#standby_disconnect_on_failover=false	# If "true", in a failover situation wait for all standbys to
+standby_disconnect_on_failover={{repmgr_standby_disconnect_on_failover}}	# If "true", in a failover situation wait for all standbys to
 					# disconnect their WAL receivers before electing a new primary
 					# (PostgreSQL 9.5 and later only; repmgr user must be a superuser for this)
-#sibling_nodes_disconnect_timeout=30	# If "standby_disconnect_on_failover" is true, the maximum length of time
+sibling_nodes_disconnect_timeout={{sibling_nodes_disconnect_timeout}}	# If "standby_disconnect_on_failover" is true, the maximum length of time
 					#  (in seconds) to wait for other standbys to confirm they have disconnected their
 					# WAL receivers
-#primary_visibility_consensus=false	# If "true", only continue with failover if no standbys have seen
+primary_visibility_consensus={{repmgr_primary_visibility_consensus}}	# If "true", only continue with failover if no standbys have seen
 					# the primary node recently. *Must* be the same on all nodes.
-#failover_validation_command=''		# Script to execute for an external mechanism to validate the failover
+{{ '' if repmgr_failover_validation_command else '#' }}failover_validation_command={{repmgr_failover_validation_command}}		# Script to execute for an external mechanism to validate the failover
 					# decision made by repmgrd. One or both of the following parameter placeholders
 					# should be provided, which will be replaced by repmgrd with the appropriate
 					# value: %n (node_id), %a (node_name). *Must* be the same on all nodes.
-#election_rerun_interval=15		# if "failover_validation_command" is set, and the command returns
+election_rerun_interval={{repmgr_election_rerun_interval}}		# if "failover_validation_command" is set, and the command returns
 					# an error, pause the specified amount of seconds before rerunning the election.
 					#
 					# The following items are relevant for repmgrd running on the primary,
 					# and will be ignored on non-primary nodes
-#child_nodes_check_interval=5		# Interval (in seconds) to check for attached child nodes (standbys)
-#child_nodes_connected_min_count=-1	# Minimum number of child nodes which must remain connected, otherwise
+child_nodes_check_interval={{repmgr_child_nodes_check_interval}}		# Interval (in seconds) to check for attached child nodes (standbys)
+child_nodes_connected_min_count={{repmgr_child_nodes_connected_min_count}}	# Minimum number of child nodes which must remain connected, otherwise
 					# disconnection command will be triggered
-#child_nodes_disconnect_min_count=-1	# Minimum number of disconnected child nodes required to execute disconnection command
+child_nodes_disconnect_min_count={{repmgr_child_nodes_disconnect_min_count}}	# Minimum number of disconnected child nodes required to execute disconnection command
 					# (ignored if "child_nodes_connected_min_count" set)
-#child_nodes_disconnect_timeout=30	# Interval between child node disconnection and disconnection command execution
-#child_nodes_disconnect_command=''	# Command to execute if child node disconnection detected
-
+child_nodes_disconnect_timeout={{repmgr_child_nodes_disconnect_timeout}}	# Interval between child node disconnection and disconnection command execution
+{{ '' if repmgr_child_nodes_disconnect_command else '#' }}={{repmgr_child_nodes_disconnect_command}}	# Command to execute if child node disconnection detected
 
 #------------------------------------------------------------------------------
 # service control commands
