--- a/templates/repmgr.conf-5.1.j2
+++ b/templates/repmgr.conf-5.1.j2
@@ -375,7 +375,7 @@ child_nodes_disconnect_timeout={{repmgr_child_nodes_disconnect_timeout}}	# Inter
 #
 # Debian/Ubuntu users: use "sudo pg_ctlcluster" to execute service control commands.
 #
-# For more details, see: https://repmgr.org/docs/4.1/configuration-service-commands.html
+# For more details, see: https://repmgr.org/docs/current/configuration-service-commands.html
 
 service_start_command ='{{ repmgr_service_start_command }}'
 service_stop_command ='{{ repmgr_service_stop_command }}'
