--- a/templates/sudoers.postgresql.j2
+++ b/templates/sudoers.postgresql.j2
@@ -1,7 +1,3 @@
 # this is required when running sudo over ssh without -t:
 Defaults:postgres !requiretty
-postgres ALL = NOPASSWD: /usr/bin/pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} stop, \
-  /usr/bin/pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} start, \
-  /usr/bin/pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart, \
-  /usr/bin/pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload, \
-  /usr/bin/pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} status
+postgres ALL = NOPASSWD: /usr/bin/pg_ctlcluster, /usr/lib/postgresql/{{ postgresql_version }}/bin/pg_ctl
