--- a/templates/sudoers.postgresql.j2
+++ b/templates/sudoers.postgresql.j2
@@ -1,6 +1,8 @@
 # this is required when running sudo over ssh without -t:
-Defaults:postgres !requiretty
-postgres ALL = NOPASSWD: /usr/bin/pg_ctlcluster, \
+Defaults:{{ postgresql_admin_user }} !requiretty
+{{ postgresql_admin_user }} ALL = NOPASSWD: /usr/bin/pg_ctlcluster, \
   /usr/lib/postgresql/{{ postgresql_version }}/bin/pg_ctl, \
   /usr/bin/systemctl start repmgrd, \
-  /usr/bin/systemctl stop repmgrd
+  /usr/bin/systemctl stop repmgrd , \
+  /usr/bin/ip *, \
+  /usr/sbin/arping *
