install pg_stat_statements

--- a/templates/postgresql.conf-11.j2
+++ b/templates/postgresql.conf-11.j2
@@ -692,3 +692,7 @@ include_dir = '{{ postgresql_include_dir }}'			# include files ending in '.conf'
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
+
+{% if postgresql_ext_install_pg_stat_statements is defined and postgresql_ext_install_pg_stat_statements is true%}
+pg_stat_statements.track = all
+{% endif %}
