--- a/templates/postgresql.conf-12.j2
+++ b/templates/postgresql.conf-12.j2
@@ -754,3 +754,7 @@ include_dir = '{{ postgresql_include_dir }}'                    # include files 
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
+
+{% if postgresql_ext_install_pg_stat_statements is defined and postgresql_ext_install_pg_stat_statements is true%}
+pg_stat_statements.track = all
+{% endif %}
